--- a/ichrisbirch/app/static/sass/layout/_navigation.scss
+++ b/ichrisbirch/app/static/sass/layout/_navigation.scss
@@ -1,6 +1,8 @@
 nav {
     & ul {
         width: 90%;
+        position: relative;
+        z-index: 1;
         display: inline-flex;
         justify-content: space-evenly;
         align-items: center;
@@ -20,9 +22,9 @@ nav {
         &[data-secondary] {
             width: 80%;
             margin-left: var(--space-2xl);
-            position: relative;
+            // position: relative;
             // this makes the link not easy to click
-            // z-index: -1;
+            z-index: 0;
         }
     }
 
